rules.v4
################## THIS ONE YACKS ####################
# Generated by iptables-save v1.8.7 on Fri Oct  1 20:05:01 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -j INPUT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT


######## Ethernet (eth0) Allows

# This one pretty much allows anything on eth0
-A INPUT -i eth0 -j ACCEPT

-A INPUT -i eth0  -p tcp --dport 22 -j ACCEPT

-A INPUT -i eth0  -p tcp --dport 3389 -j ACCEPT
-A INPUT -i eth0  -p udp --dport 3389 -j ACCEPT

-A INPUT -i eth0  -p tcp --dport 53 -j ACCEPT
-A INPUT -i eth0  -p udp --dport 53 -j ACCEPT


######## WiFi (wlan0) Allows
-A INPUT -i wlan0 -p tcp --dport 22 -j ACCEPT
#-A INPUT -i wlan0 -p tcp --dport 3389 -j ACCEPT
#-A INPUT -i wlan0 -p udp --dport 3389 -j ACCEPT
#-A INPUT -i wlan0 -p tcp --dport 53 -j ACCEPT
#-A INPUT -i wlan0 -p udp --dport 53 -j ACCEPT


######## Closing rule
-A FORWARD -i wlan0 -j REJECT
-A FORWARD -i eth0 -j REJECT

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o wlan0 -j MASQUERADE

COMMIT
